tests/NormalTests/paczka1/fuzzy1/22397150.err
Error in line 7: gfCvB3 S742 49,8
Error in line 3: 9Y7up S38 78,6
Error in line 4: YTpusa S742 88,6
Error in line 12: 9Y7up A47 61,8
Error in line 22: 9Y7up S742 95,1
Error in line 19: IFSkf8 A399 5,3
Error in line 34: 9Y7up S742 274,40
Error in line 38: MtxH S742 84,5
